k8s/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: front-deployment
spec:
  replicas: 1
  selector:
   matchLabels:
    component: front
  template:
   metadata:
     labels:
      component: front
   spec:
    containers:
       - name: frontapp
         image: rkudache31/weather_front
         ports:
         - containerPort: 3000
