k8s/back-service.yml
apiVersion: v1
kind: Service
metadata: 
   name: back-svc
   labels:
      app: back-svc
spec:
   type: ClusterIP
   ports:
      - port: 3001
        targetPort: 3001
   selector: 
         component: back
