k8s/front-service.yml
apiVersion: v1
kind: Service
metadata: 
   name: front-svc
   labels:
        app: front-svc
spec:
   type: ClusterIP
   ports:
      - port: 80
        targetPort: 3000
   selector: 
         component: front
